@@ -57,12 +57,13 @@ table.meta td {width: 40%;}
 
 table.inventory {clear: both; width: 100%;}
 table.inventory th {font-weight: bold; text-align: center;}
-table.inventory th:first-child {width:65%}
-table.inventory td:nth-child(1) {width: 26%;}
-table.inventory td:nth-child(2) {width: 38%;}
-table.inventory td:nth-child(3) {text-align: right; width: 12%;}
-table.inventory td:nth-child(4) {text-align: right; width: 12%;}
-table.inventory td:nth-child(5) {text-align: right; width: 12%;}
+table.inventory th:nth-child(1) {width:8%}
+table.inventory th:nth-child(2) {width:75%;}
+table.inventory th:nth-child(3) {width: 8%;}
+table.inventory th:nth-child(4) {width: 8%;}
+table.inventory td:nth-child(1),table.inventory td:nth-child(3),table.inventory td:nth-child(4){
+	text-align: right;
+}
 
 /* table balance */
 
